...
                                        </constraints>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Group Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="emq-Vy-yzm">
                                        <rect key="frame" x="30" y="143" width="215" height="30"/>
                                        <nil key="textColor"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z4H-eo-K0s">
                                        <rect key="frame" x="83" y="249" width="109" height="30"/>
                                        <state key="normal" title="See your offers!"/>
                                        <connections>
                                            <action selector="showOfferTapped:" destination="VTH-Z2-qN1" eventType="touchUpInside" id="fJh-OM-nqy"/>
...
                                                </subviews>
                                            </stackView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Virtual Currency" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vg0-T3-a6u">
                                                <rect key="frame" x="0.0" y="37" width="124.5" height="20.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        <viewLayoutGuide key="safeArea" id="93Y-Qt-mX6"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Gaming" image="game" id="91O-Pc-evq"/>
                    <connections>
                        <outlet property="achievementLabel" destination="TkC-0z-98a" id="d79-Le-O6c"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aSh-ZN-Mzc">
                                        <rect key="frame" x="30" y="184" width="255" height="30"/>
                                        <nil key="textColor"/>
...
                        <viewLayoutGuide key="safeArea" id="zCY-ni-HZX"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="E-commerce" image="shopping-cart" id="yJR-nq-22G"/>
                    <connections>
                        <outlet property="categoryView" destination="Oyd-ye-4c4" id="KED-2b-BjI"/>
...
                        <viewLayoutGuide key="safeArea" id="cVd-aR-nuj"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Travel" image="black-plane" id="pIB-0y-HeV"/>
                    <connections>
                        <outlet property="destinationTextField" destination="G0E-6Z-SIt" id="HOv-aU-O1W"/>
...
