...
                                        <rect key="frame" x="30" y="214" width="215" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qt1-9q-SnJ">
                                        <rect key="frame" x="118.5" y="278" width="38" height="30"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <action selector="onLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xfl-Ji-jFh"/>
                                            <segue destination="oe3-kE-GPs" kind="show" id="CGA-1r-4BW"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ng4-VI-TFE">
...
